Minor change to improve inclusivity

--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -1267,7 +1267,7 @@ It is possible that a ~security issue becomes irrelevant after it was initially 
 but before a patch was implemented. For example, the vulnerable functionality was removed
 or significantly changed resulting in the vulnerability not being present anymore.
 
-If an engineer notices that an issue has become irrelevant, he should @-mention the person
+If an engineer notices that an issue has become irrelevant, they should @-mention the person
 that triaged the issue to confirm that the vulnerability is not present anymore. <b>Note that it might still be necessary to backport a patch to previous releases according to our [maintenance policy](https://docs.gitlab.com/ee/policy/maintenance.html#security-releases)</b>.
 In case no backports are necessary, the issue can be closed.
 
