Fix broken internal URLs

--- a/culture/all-remote/asynchronous/index.html.md.erb
+++ b/culture/all-remote/asynchronous/index.html.md.erb
@@ -279,7 +279,7 @@ Slack refers to this as `Mark all messages as read`, which is easily toggled by 
 
 ### Communicate your work preferences
 
-Create a rudimentary [README](/handbook/ceo/chief-of-staff-team/readmes/dmurph/) that clarifies how you work. Ideally, it's working from a GitLab Issue board, tagging system, or To-Do list which can be understood and used company-wide. You can then post the link to your README in your Slack profile, pointing others to it. Showing others how to deliberately choose asynchronous over synchronous is vital to reinforcing our operating principle of [Bias towards asynchronous communication](/handbook/values/#bias-towards-asynchronous-communication).
+Create a rudimentary README that clarifies how you work. Ideally, it's working from a GitLab Issue board, tagging system, or To-Do list which can be understood and used company-wide. You can then post the link to your README in your Slack profile, pointing others to it. Showing others how to deliberately choose asynchronous over synchronous is vital to reinforcing our operating principle of [Bias towards asynchronous communication](/handbook/values/#bias-towards-asynchronous-communication).
 
 This is an extension of another remote-first forcing function: [Always answer with a link](/company/culture/all-remote/self-service/#answer-with-a-link).
 
