--- a/culture/all-remote/mental-health/index.html.md.erb
+++ b/culture/all-remote/mental-health/index.html.md.erb
@@ -355,7 +355,7 @@ You can reduce your mental load by clearing all your unread messages at the end 
 
 ### Communicate your work preferences
 
-Create a rudimentary [README](https://about.gitlab.com/handbook/ceo/chief-of-staff-team/readmes/dmurph/) that clarifies how you work. Ideally, it's working from a GitLab Issue board, tagging system, or To-Do list which can be understood and used company-wide. You can then post the link to your README in your Slack profile, pointing others to it. Showing others how to deliberately chose asynchronous over synchronous is vital to reinforcing our operating principle of [Bias towards asynchronous communication](https://about.gitlab.com/handbook/values/#bias-towards-asynchronous-communication).
+Create a rudimentary README that clarifies how you work. Ideally, it's working from a GitLab Issue board, tagging system, or To-Do list which can be understood and used company-wide. You can then post the link to your README in your Slack profile, pointing others to it. Showing others how to deliberately chose asynchronous over synchronous is vital to reinforcing our operating principle of [Bias towards asynchronous communication](https://about.gitlab.com/handbook/values/#bias-towards-asynchronous-communication).
 
 ### Be transparent on capacity
 
