--- a/culture/all-remote/terminology/index.html.md.erb
+++ b/culture/all-remote/terminology/index.html.md.erb
@@ -31,7 +31,7 @@ GitLab is the world's largest all-remote company. We are 100% remote, with no co
 </figure>
 <!-- blank line -->
 
-*In the [video](https://youtu.be/IU2nTj6NSlQ) above, GitLab Head of Remote [Darren M.](/handbook/ceo/chief-of-staff-team/readmes/dmurph/) discusses the topic of all-remote during an interview with [Stuart Miniman](https://twitter.com/stu/), host of [theCUBE](https://www.thecube.net/) and GM of Content at [SiliconANGLE Media](https://siliconangle.com/). A portion is transcribed below.*
+*In the [video](https://youtu.be/IU2nTj6NSlQ) above, GitLab Head of Remote Darren M. discusses the topic of all-remote during an interview with [Stuart Miniman](https://twitter.com/stu/), host of [theCUBE](https://www.thecube.net/) and GM of Content at [SiliconANGLE Media](https://siliconangle.com/). A portion is transcribed below.*
 
 > We don't say you have to work from home — you can work from anywhere.
 >
