--- a/culture/all-remote/workspace/index.html.md.erb
+++ b/culture/all-remote/workspace/index.html.md.erb
@@ -264,7 +264,7 @@ Research has [found](https://www.bbc.com/worklife/article/20160617-the-never-end
 
 ## Examples of work-from-home setups
 
-- GitLab Head of Remote, Darren M., shares [details on his work-from-home arrangement](/handbook/ceo/chief-of-staff-team/readmes/dmurph/#work-from-home-office-setup), which includes a mirrorless camera as a webcam for optimal video quality.
+- GitLab Head of Remote, Darren M., shares details on his work-from-home arrangement, which includes a mirrorless camera as a webcam for optimal video quality.
 - Job van der Voort, CEO at Remote, provides [a breakdown of his top-notch home office setup](https://remote.com/blog/maximum-productivity-home-office){:target="_blank"}. 
 - GitLab Developer Evangelist Michael F. [details his current setup](https://dnsmichi.at/all-remote-workspace/){:target="_blank"} with helpful tips on lighting, apps and settings, and how to personalize your workspace. 
 - Emma Bostian, Software Engineer at Spotify, [writes about her home-office tech setup for recording courses and podcasts](https://dev.to/emmabostian/lights-camera-action-my-tech-setup-for-recording-courses-podcasts-2p6j){:target="_blank"} 
