--- a/culture/inclusion/erg-minorities-in-tech/advanced-software-engineering-course/index.html.md.erb
+++ b/culture/inclusion/erg-minorities-in-tech/advanced-software-engineering-course/index.html.md.erb
@@ -44,7 +44,7 @@ The GitLab instructors below have volunteered their time to create the course co
 
 - [Brendan O’Leary](/company/team/#brendan), Senior Developer Evangelist
 - [Michael Friedrich](/company/team/#dnsmichi), Developer Evangelist
-- [Darren Murph](https://about.gitlab.com/handbook/ceo/chief-of-staff-team/readmes/dmurph/), Head of Remote
+- Darren Murph, Head of Remote
 - [Paul Slaughter](/company/team/#pslaughter), Senior Frontend Engineer
 - [Tim Zallmann](/company/team/#timzallmann), Director of Engineering
 - [Ash McKenzie](/company/team/#ashmckenzie), Staff Backend Engineer
