Update Ops Showcase instructions

--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -68,7 +68,7 @@ GitLab encourages transparency by default, and when meetings are recorded, they 
 
 ### Ops Engineering Showcase
 
-Starting in 2023 in FY24-Q1, a fresh new format for this showcase will include the recording and sharing of videos that team members have created.  Once a video has been created and an entry added to Google [doc](https://docs.google.com/document/d/1eeyahWYH78vjmc900rdVQ8cJK6ehi4OGnyILDDmLU4k/edit#bookmark=id.r5ekcxbvslty), an async discussion issue should be created using this [template](https://gitlab.com/gitlab-org/ci-cd/section-showcases/-/blob/main/.gitlab/issue_templates/Showcase%20Discussion.md). Based on the amount of questions being discussed in the issue, an AMA may be set up to discuss further in a group setting.
+Starting in 2023 in FY24-Q1, a fresh new format for this showcase will include the recording and sharing of videos that team members have created. Once a video has been created, an async discussion issue [should be created](https://gitlab.com/gitlab-org/ci-cd/section-showcases/-/issues/new) using this [template](https://gitlab.com/gitlab-org/ci-cd/section-showcases/-/blob/main/.gitlab/issue_templates/Showcase%20Discussion.md) and listed under the relevant quarterly epic. Based on the amount of questions being discussed in the issue, an AMA may be set up to discuss further in a group setting.
 Like before, these videos are intended to be opportunities for engineers to show off the things they've been working on.
 
 [Ops Engineering Showcase Epic](https://gitlab.com/groups/gitlab-com/-/epics/1157)
@@ -77,7 +77,7 @@ Like before, these videos are intended to be opportunities for engineers to show
 
 | Year | Quarter | Links |
 | ------ | ------ | ------ |
-| 2023 | FY24-Q1 | [Videos](https://docs.google.com/document/d/1eeyahWYH78vjmc900rdVQ8cJK6ehi4OGnyILDDmLU4k/edit#bookmark=id.r5ekcxbvslty)  |
+| 2023 | FY24-Q1 | [Videos](https://gitlab.com/groups/gitlab-com/-/epics/2099) |
 
 #### Monthly Recordings 
 
