Small job family format changes

--- a/job-families/sales/strategic-account-leader/index.html.md.erb
+++ b/job-families/sales/strategic-account-leader/index.html.md.erb
@@ -3,9 +3,9 @@ layout: job_family_page
 title: "Enterprise Account Executive Job Family"
 ---
 
-**Enterprise Account Executive Job Family Matrix**
+# **Enterprise Account Executive Job Family Matrix**
 
-| Enterprise Account Executive |
+| Enterprise Account Executive | Grade |
 | --------| --------|
 | Associate Strategic Account Executive |  8 |
 | Strategic Account Executive | 8 |
