Update Optimize Group with goals and dogfooding

--- a/development/dev/plan/optimize/partials/_organizing_work.erb
+++ b/development/dev/plan/optimize/partials/_organizing_work.erb
@@ -18,6 +18,11 @@ Basecamp thinks about these stages in relation to the [climb and descent of a hi
 
 While individual groups are free to use as many stages in the [Product Development Flow](/handbook/product-development-flow/#workflow-summary) workflow as they find useful, we should be somewhat prescriptive on how issues transition from discovery/refinement to implementation.
 
+##### Measuring the value of the team deliverables
+
+To visualize our flow of value to customers, we're [dogfooding](https://about.gitlab.com/handbook/engineering/development/principles/#dogfooding) [Value Stream Analytics](https://gitlab.com/groups/gitlab-org/-/analytics/value_stream_analytics?value_stream_id=1022&project_ids[]=278964&label_name[]=group%3A%3Aoptimize) to measure the time it takes to go from planning to production.
+
+
 ##### Backlog management
 
 Backlog management is very challenging, but we try to do so with the use of labels and milestones.
