--- a/development/dev/plan/optimize/index.html.md.erb
+++ b/development/dev/plan/optimize/index.html.md.erb
@@ -12,6 +12,7 @@ title: "Optimize Group"
 ### Plan:Optimize
 {: #welcome}
 
+### [Optimize FY24 direction and goals](https://gitlab.com/groups/gitlab-org/-/epics/9882#fy24-goals)
 
 ### How we work
 
