Add UX Paper Cuts to handbook

--- a/product/ux/ux-department-workflow/index.html.md.erb
+++ b/product/ux/ux-department-workflow/index.html.md.erb
@@ -117,6 +117,8 @@ GitLab uses labels to categorize, prioritize, and track work. The following is a
    * UX and Pajamas specifications
    * Usability standards
    * Feature viability standards
+* [**UX Paper Cuts** label](https://gitlab.com/groups/gitlab-org/-/merge_requests?scope=all&state=opened&label_name[]=UX%20Paper%20Cuts): Used to prioritize and track work from the UX Paper Cuts team.
+
 
    This label is applied to any follow-up issues that address a UX gap. It does not apply to the issue or merge request that created the UX debt. For example, if the agreed MVC design solution is not fully realized due to release pressures or implementation oversight, that's considered UX Debt. 
    
