Verify Developer onboarding with Reviewing of MRs

--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -18,7 +18,7 @@ The Ops Sub-department is composed of development teams working on Verify, Packa
 
 ## Teams and Handbook Pages
 
-The following teams comprise the sub-department:
+The following teams comprise the Ops sub-department:
 
 - Verify stage - [handbook](/handbook/engineering/development/ops/verify/)
     - Pipeline Execution - [handbook](/handbook/engineering/development/ops/verify/pipeline-execution/), [jtbd](/handbook/engineering/development/ops/verify/pipeline-execution/jtbd/)
