--- a/development/ops/verify/pipeline-insights/index.html.md.erb
+++ b/development/ops/verify/pipeline-insights/index.html.md.erb
@@ -306,3 +306,7 @@ We have a monthly synchronous 30-minute [think big meeting](https://about.gitlab
 
 ### On issues
 Issues worked on by the Pipeline Insights group have a group label of ~"group::pipeline insights". Issues that contribute to the verify stage of the devops toolchain have the ~"devops::verify" label.
+
+## Developer Onboarding
+
+Refer to the [Developer Onboarding in Verify](/handbook/engineering/development/ops/verify/#developer-onboarding-in-verify) section.
