--- a/development/ops/package/index.html.md.erb
+++ b/development/ops/package/index.html.md.erb
@@ -28,11 +28,11 @@ The Package stage is made up of two groups:
 
 ### Package:Container Registry
 
-<%= direct_team(manager_slug: 'michelletorres') %>
+<%= direct_team(role_regexp: /Container Registry/, manager_slug: 'crystalpoole') %>
 
 ### Package:Package Registry
 
-<%= direct_team(manager_slug: 'ckroutil') %>
+<%= direct_team(role_regexp: /Package Registry/, manager_slug: 'crystalpoole') %>
 
 ## 📈 Measuring results
 
