--- a/development/ops/package/package-registry/index.html.md.erb
+++ b/development/ops/package/package-registry/index.html.md.erb
@@ -20,13 +20,13 @@ stage](/handbook/engineering/development/ops/package/), which integrates with [G
 
 The following people are permanent members of the Package Registry Group:
 
-<%= direct_team(manager_slug: 'ckroutil') %>
+<%= direct_team(role_regexp: /Package Registry/, manager_slug: 'crystalpoole') %>
 
 ### Stable Counterparts
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /[,&] Package/, manager_slug: 'ckroutil') %>
+<%= stable_counterparts(role_regexp: /[,&] Package/, manager_slug: 'crystalpoole') %>
 
 ## How We Work
 
@@ -57,7 +57,7 @@ The DRI for a given project can be identified by looking at the corresponding ep
 * Most appropriate slack channel to reach out to: `#g_package-registry`
 * Best individual to reach out to: <!-- GitLab handle of the DRI, or "TBD" if none has been assigned yet -->
 * PM: @trizzi
-* EM: @ckroutil
+* EM: @crystalpoole
 ```
 
 Additionally, we maintain a list of active projects and the assigned DRI on this page, in [What Are We Working On](#what-are-we-working-on).
