feat: link to priority board

--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -43,7 +43,7 @@ Currently, Practices team supports Infrastructure Reliability related to the bel
 ## Useful Links
 
 | Workflow | [Issue Labels](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#labels) <br> [Weekly Issue Triage](https://gitlab.com/groups/gitlab-com/gl-infra/-/issues/?sort=created_date&state=opened&label_name%5B%5D=team%3A%3APractices&first_page_size=100) |
-| Backlog | [Current Milestone](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/4696185) <br> [Service Backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/4696185) |
+| Backlog | [Current Milestone](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/4696185) <br> [Service Backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/4696185) <br> [Priority Board](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/5396531) |
 | Reaching us | [`#g_infra_practices`](https://gitlab.slack.com/archives/C04M6HVAY49) <br> [`#reliability-lounge`](https://gitlab.slack.com/archives/C03QC5KNW5N) <br> `@gitlab-org/reliability/practices`
 | Weekly Agenda | [Weekly alternative APAC/EMEA and EMEA/AMER](https://docs.google.com/document/d/1jKcIw0fRkcAN-vXQuvD0OUJpoxchjVOTqMYdGzeW87I/edit#heading=h.6lawfomkdqum) |
 | Achievements | [FY24 - Q1](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/17301) |
