Add environment detail page slack link to Orchestrate team page

--- a/development/ops/orchestrate/index.html.md.erb
+++ b/development/ops/orchestrate/index.html.md.erb
@@ -53,6 +53,7 @@ Some dedicated Slack channels:
 * Terraform backend: [`f_terraform_backend`](https://gitlab.slack.com/archives/f_terraform_backend)
 * [Terraform provider](https://gitlab.com/gitlab-org/terraform-provider-gitlab): [`terraform-provider`](https://gitlab.slack.com/archives/terraform-provider)
 * Auto DevOps: [`f_autodevops`](https://gitlab.slack.com/archives/f_autodevops)
+* Environment Detail Page: [`#f_environment_details_page`](https://gitlab.slack.com/archives/C04N1P3B3UL)
 
 ## Insights
 
