--- a/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
@@ -30,17 +30,17 @@ Quality Engineering Manager: Vincy Wilson
 | 1    	| [Fulfillment] | [Purchase]         | Valerie Burton                        |
 | 2    	| [Fulfillment] | [Provision]        | Dan Davison                           |
 | 3    	| [Fulfillment] | [Utilization]      | Edgars Brālītis                       | 
-| 4     | [Fulfillment] | [Fulfillment Platform] | TBH                               |
+| 4     | [Fulfillment] | [Fulfillment Platform] | -                               |
 | 5     | [Fulfillment] | [Billing and Subscription Management] | Chloe Liu          |
-| 6     | [Fulfillment] | [Commerce Integrations] | TBH                              |
-| 7     | [Fulfillment] | [Fulfillment Admin Tooling] | TBH                          |
 
 [Growth section]
 
 | S.No 	| Stage       	| Group                  | SET Counterpart                                                        |
 |------	|---------------|------------------------|------------------------------------------------------------------------|
-| 1    	| [Growth]      | [Acquisition]          | TBH                                                                    |
-| 2    	| [Growth]      | [Activation]           | TBH                                                                    |
+| 1    	| [Growth]      | [Acquisition]          | -                                                                    |
+| 2    	| [Growth]      | [Activation]           | -                                                                    |
+
+* FYI - There are no hiring plans for SETs in FY24.
 
 ## OKRs 
 
@@ -113,8 +113,6 @@ Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122
 [Utilization]: /handbook/product/categories/#utilization-group
 [Fulfillment Platform]: /handbook/product/categories/#fulfillment-platform-group
 [Billing and Subscription Management]: /handbook/product/categories/#billing-and-subscription-management-group
-[Commerce Integrations]: /handbook/product/categories/#commerce-integrations-group
-[Fulfillment Admin Tooling]: /handbook/product/categories/#fulfillment-admin-tooling-group
 [Growth section]: /handbook/product/categories/#growth-section
 [Growth]: /handbook/product/categories/#growth-stage
 [Activation]: /handbook/product/categories/#activation-group
