Update Utilization Handbook page: planning issue urls

--- a/development/fulfillment/utilization/index.html.md.erb
+++ b/development/fulfillment/utilization/index.html.md.erb
@@ -85,7 +85,7 @@ The Engineering Manager will report on the progress of [OKRs](/company/okrs/) ev
 
 ### Taking Time Off (PTO)
 
-It is important to [take time off](/handbook/paid-time-off/#paid-time-off) so that you can rest, reset, avoid burnout, take care of loved ones, etc. You are encouraged to take time for yourself or your family following our operating principle of [Family and Friends First, work second](/handbook/values/#family-and-friends-first-work-second).
+It is important to [take time off](/handbook/paid-time-off/#paid-time-off) so that you can rest, reset, avoid burnout, take care of loved ones, etc. You are encouraged to take time for yourself or your family following our operating principle of [Family and Friends First, work second](/handbook/values/#family-and-friends-first-work-second). Guidance is to communicate your PTO intention with your manager with [twice the number of days](/handbook/paid-time-off/#a-gitlab-team-members-guide-to-time-off) that you are taking off.
 
 When going out of office, please be sure to [clearly communicate](/handbook/paid-time-off/#communicating-your-time-off) your availability with other people. The following steps are required when submitting a PTO notification.
 
@@ -134,17 +134,10 @@ We have [cross-functional prioritization](/handbook/product/cross-functional-pri
 - For a quick view and controls on bugs by priority, [this board](https://gitlab.com/groups/gitlab-org/-/boards/2874336?label_name[]=group%3A%3Autilization&label_name[]=type%3A%3Abug) can be used. More detailed information on bugs, including backlog and open rate, both of which are factors in determining their desired bug percentage for the upcoming milestone, is shown in this [dashboard](https://app.periscopedata.com/app/gitlab/1037965/Bug-Prioritization) (select Utilization from filters).
 - The team collaborates on a prioritization issue that documents and discusses our current prioritization scheme.
 
-### Current Milestone
+### Planning Issues
 
-- [15.7 Planning Issue](https://gitlab.com/gitlab-org/gitlab/-/issues/379100)
-
-### Upcoming Milestones
-
-- [15.8 Planning Issue](#) - TBD
-
-### Past Milestones
-
-- [Archive 13.8 - present](https://gitlab.com/gitlab-org/fulfillment-meta/-/issues/?search=utilization&sort=created_date&state=closed&label_name%5B%5D=Planning%20Issue&first_page_size=20)
+- [Current Planning Issue](https://gitlab.com/gitlab-org/fulfillment-meta/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Autilization&label_name%5B%5D=Planning%20Issue&first_page_size=100)
+- [Archive 13.8 - present](https://gitlab.com/gitlab-org/fulfillment-meta/-/issues/?sort=created_date&state=closed&label_name%5B%5D=group%3A%3Autilization&label_name%5B%5D=Planning%20Issue&first_page_size=100)
 
 
 ### How Engineering Refines Issues
