--- a/metrics/index.html.md.erb
+++ b/metrics/index.html.md.erb
@@ -40,7 +40,7 @@ The links below take you to a handbook dashboard page which covers metrics from 
     * [Pipeline Execution Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-execution)
     * [Pipeline Authoring Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-authoring)
     * [Runner Group Dashboards](/handbook/engineering/metrics/ops/verify/runner)
-    * [Pipeline Insights Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-insights)
+    * [Pipeline Security Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-security)
     * [Runner SaaS Dashboards](/handbook/engineering/metrics/ops/verify/runner-saas)
   * [Package Stage Dashboards](/handbook/engineering/metrics/ops/package)
     * [Package Registry Group Dashboards](/handbook/engineering/metrics/ops/package/package-registry)
