Change Pipeline Insights to Pipeline Security

--- a/product/categories/ops/index.html.md.erb
+++ b/product/categories/ops/index.html.md.erb
@@ -5,7 +5,7 @@ title: "Ops Section"
 
 <% section_name = 'Ops Section' %>
 <% section_id = 'ops' %>
-<% section_groups = ['Verify:Pipeline Execution Group','Verify:Pipeline Authoring Group','Verify:Runner Group','Verify:Pipeline Insights Group','Package Group','Release Group','Configure Group','Monitor Group'] %>
+<% section_groups = ['Verify:Pipeline Execution Group','Verify:Pipeline Authoring Group','Verify:Runner Group','Verify:Pipeline Security Group','Package Group','Release Group','Configure Group','Monitor Group'] %>
 
 #### On this page
 {:.no_toc .hidden-md .hidden-lg}
