--- a/product/categories/verify/index.html.md.erb
+++ b/product/categories/verify/index.html.md.erb
@@ -33,7 +33,7 @@ Verify teams:
 - [Verify:Pipeline Execution](/handbook/engineering/development/ops/verify/pipeline-execution/)
 - [Verify:Pipeline Authoring](/handbook/engineering/development/ops/verify/pipeline-authoring/)
 - [Verify:Runner](/handbook/engineering/development/ops/verify/runner/)
-- [Verify:Pipeline Insights](/handbook/engineering/development/ops/verify/pipeline-insights/)
+- [Verify:Pipeline Security](/handbook/engineering/development/ops/verify/pipeline-security/)
 
 Verify UX process pages: 
 
