--- a/product/ux/stage-group-ux-strategy/ci-cd/index.html.md.erb
+++ b/product/ux/stage-group-ux-strategy/ci-cd/index.html.md.erb
@@ -44,7 +44,7 @@ Our team significantly contributes to the [UX Department direction for FY23](/ha
         * [UX Scorecards - Verify:Pipeline Authoring](https://gitlab.com/groups/gitlab-org/-/epics/6891)
         * [UX Scorecards - Verify:Pipeline Execution](https://gitlab.com/groups/gitlab-org/-/epics/6890)
         * [UX Scorecards - Verify:Runner](https://gitlab.com/groups/gitlab-org/-/epics/6889)
-        * [UX Scorecards - Verify:Pipeline Insights](https://gitlab.com/groups/gitlab-org/-/epics/6893)
+        * [UX Scorecards - Verify:Pipeline Security](https://gitlab.com/groups/gitlab-org/-/epics/6893)
         * [UX Scorecards - Package](https://gitlab.com/groups/gitlab-org/-/epics/6892)
         * [UX Scorecards - Release](https://gitlab.com/groups/gitlab-org/-/epics/6776)
 1. Analytical leadership
