Change Pipeline Insights to Pipeline Security

--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -23,7 +23,7 @@ The following teams comprise the Ops sub-department:
 - Verify stage - [handbook](/handbook/engineering/development/ops/verify/)
     - Pipeline Execution - [handbook](/handbook/engineering/development/ops/verify/pipeline-execution/), [jtbd](/handbook/engineering/development/ops/verify/pipeline-execution/jtbd/)
     - Pipeline Authoring - [handbook](/handbook/engineering/development/ops/verify/pipeline-authoring/), jtbd
-    - Pipeline Insights - [handbook](/handbook/engineering/development/ops/verify/pipeline-insights/), [jtbd](/handbook/engineering/development/ops/verify/pipeline-insights/JTBD/)
+    - Pipeline Security - [handbook](/handbook/engineering/development/ops/verify/pipeline-security/), [jtbd](/handbook/engineering/development/ops/verify/pipeline-security/JTBD/)
     - Runner - [handbook](/handbook/engineering/development/ops/verify/runner/), jtbd
 - Package stage - [handbook](/handbook/engineering/development/ops/package/), [jtbd](/handbook/engineering/development/ops/package/jtbd/)
     - Container Registry - [handbook](/handbook/engineering/development/ops/package/container-registry/)
