--- a/development/ops/verify/index.html.md.erb
+++ b/development/ops/verify/index.html.md.erb
@@ -28,7 +28,7 @@ The Verify stage is made up of 5 groups:
 1. [Verify:Pipeline Authoring](/handbook/engineering/development/ops/verify/pipeline-authoring/)
 1. [Verify:Runner](/handbook/engineering/development/ops/verify/runner/)
 1. [Verify:Runner SaaS](/handbook/engineering/development/ops/verify/runner-saas/)
-1. [Verify:Pipeline Insights](/handbook/engineering/development/ops/verify/pipeline-insights/)
+1. [Verify:Pipeline Security](/handbook/engineering/development/ops/verify/pipeline-security/)
 
 ## UX Strategy
 
@@ -41,7 +41,7 @@ A [Job to be Done (JTBD)](/handbook/product/ux/jobs-to-be-done/) is a framework,
 * [Verify:Pipeline Execution JTBD](/handbook/engineering/development/ops/verify/pipeline-execution/jtbd/)
 * [Verify:Pipeline Authoring JTBD](/handbook/engineering/development/ops/verify/pipeline-authoring/jtdb/)
 * [Verify:Runner JTBD](/handbook/engineering/development/ops/verify/runner/jtbd/)
-* [Verify:Pipeline Insights JTBD](/handbook/engineering/development/ops/verify/pipeline-insights/JTBD/)
+* [Verify:Pipeline Security JTBD](/handbook/engineering/development/ops/verify/pipeline-security/JTBD/)
 
 ### Pipeline Authoring and Pipeline Execution Collaboration
 
@@ -61,9 +61,9 @@ Pipeline Authoring and Pipeline Execution are closely related but they also repr
 
 <%= direct_team(manager_role: 'Fullstack Engineering Manager, Verify:Runner') %>
 
-### Verify:Pipeline Insights
+### Verify:Pipeline Security
 
-<%= direct_team(manager_role: 'Fullstack Engineering Manager, Verify:Pipeline Insights') %>
+<%= direct_team(manager_role: 'Fullstack Engineering Manager, Verify:Pipeline Security') %>
 
 ## How we work
 
@@ -72,7 +72,7 @@ Each group in Verify is encouraged to define their own process based on what wor
 * [Verify:Pipeline Execution](/handbook/engineering/development/ops/verify/pipeline-execution/)
 * [Verify:Pipeline Authoring](/handbook/engineering/development/ops/verify/pipeline-authoring/)
 * [Verify:Runner](/handbook/engineering/development/ops/verify/runner/)
-* [Verify:Pipeline Insights](/handbook/engineering/development/ops/verify/pipeline-insights/)
+* [Verify:Pipeline Security](/handbook/engineering/development/ops/verify/pipeline-security/)
 
 ### Developer Onboarding in Verify
 
@@ -135,7 +135,7 @@ other_manager_roles = [
   'Fullstack Engineering Manager, Verify:Pipeline Authoring',
   'Fullstack Engineering Manager, Verify:Pipeline Execution',
   'Fullstack Engineering Manager, Verify:Runner',
-  'Fullstack Engineering Manager, Verify:Pipeline Insights'
+  'Fullstack Engineering Manager, Verify:Pipeline Security'
 ]
 stable_counterparts(role_regexp: role_regexp, direct_manager_role: direct_manager_role, other_manager_roles: other_manager_roles)
 %>
@@ -257,7 +257,7 @@ As part of our GitLab values, we strive to be [inclusive to those in regions wit
   * Verify:Pipeline Execution [#g_pipeline-execution](https://gitlab.slack.com/archives/CPCJ8CCCX)
   * Verify:Pipeline Authoring [#g_pipeline-authoring](https://gitlab.slack.com/archives/C019R5JD44E)
   * Verify:Runner [#g_runner](https://gitlab.slack.com/archives/CBQ76ND6W)
-  * Verify:Pipeline Insights [#g_pipeline-insights](https://gitlab.slack.com/archives/CPANF553J)
+  * Verify:Pipeline Security [#g_pipeline-security](https://gitlab.slack.com/archives/CPANF553J)
 * Verify Engineering Management [#s_verify-em](https://gitlab.slack.com/archives/C014UTH4W02)
 * Verify Frontend Engineering [#s_verify_fe](https://gitlab.slack.com/archives/CUYH1MP0Q)
 * CI/CD UX [#ux_ci-cd](http://gitlab.slack.com/archives/CL9STLJ06)
