--- a/development/ops/verify/pipeline-security/JTBD/index.html.md.erb
+++ b/development/ops/verify/pipeline-security/JTBD/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Pipeline Insights Group - JTBD
-description: "The jobs-to-be-done that the Pipeline Insights Group is solving for."
+title: Pipeline Security Group - JTBD
+description: "The jobs-to-be-done that the Pipeline Security Group is solving for."
 ---
 
 ## On this page
@@ -22,4 +22,4 @@ Utilize JTBD and job statements to:
 
 ## Jobs To Be Done
 
-<%= partial("direction/jtbd-list", locals: { stage_key: "Pipeline Insights" }) %>
+<%= partial("direction/jtbd-list", locals: { stage_key: "Pipeline Security" }) %>
