Fix broken internal links

--- a/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -16,7 +16,7 @@ For an understanding of what this team is going to be working on take a look at 
 vision](/direction/verify/). This team is responsible for delivering on the following directions: 
 
 - [Continuous Integration](/direction/verify/continuous_integration/)
-- [Continuous Integration Scaling](/direction/verify/continuous_integration_scaling/)
+- Continuous Integration Scaling
 - [Merge Trains](/direction/verify/merge_trains/)
 
 ## Mission
