Updating line managers to match proposals for Reliability Teams

--- a/infrastructure/team/reliability/database-reliability.html.md.erb
+++ b/infrastructure/team/reliability/database-reliability.html.md.erb
@@ -19,7 +19,7 @@ The team uses [Engineering Principals](/handbook/engineering/development/princip
 
 ## Team Members
 
-<%= direct_team(manager_slug: 'dcurlewis')%>
+<%=  direct_team(role_regexp: /Database Reliability/, manager_slug: 'kwanyangu') %>
 
 ## Ownership
 
