--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -20,7 +20,7 @@ and [performance](/handbook/engineering/infrastructure/performance-indicators/#g
 
 The following people are members of the Reliability:Practices team
 
-<%= direct_team(manager_slug: 'kwanyangu')%>
+<%=  direct_team(role_regexp: /Site Reliability/, manager_slug: 'kwanyangu') %>
 
 ## Ownership
 
